--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,12 @@
+.Header {
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  z-index: 2;
+}
+
 .Header .nav {
   height: 89px;
 }
