--- a/src/pages/HomePage/components/Banner/Banner.css
+++ b/src/pages/HomePage/components/Banner/Banner.css
@@ -1,9 +1,9 @@
-.Banner {
+.banner {
   background: #f1f6f7;
   position: relative;
   margin-bottom: 10px;
 }
-.Banner::before {
+.banner::before {
   content: "";
   display: block;
   width: 5%;
@@ -15,34 +15,34 @@
 }
 
 @media (min-width: 575px) {
-  .Banner::before {
+  .banner::before {
     width: 20%;
   }
 }
 @media (min-width: 991px) {
-  .Banner::before {
+  .banner::before {
     width: 30%;
   }
 }
 
-.Banner_row {
+.banner_row {
   position: relative;
   padding-top: 60px;
   z-index: 1;
 }
 
 @media (max-width: 575px) {
-  .Banner_row {
+  .banner_row {
     padding-bottom: 50px;
   }
 }
 
-.Banner__img {
+.banner__img {
   position: relative;
   top: 1px;
 }
 
-.Banner__browse {
+.banner__browse {
   display: inline-block;
   border: 1px solid #384aeb;
   border-radius: 30px;
@@ -52,7 +52,7 @@
   color: #fff;
   transition: all 0.4s ease;
 }
-.Banner__browse:hover {
+.banner__browse:hover {
   border-color: #384aeb;
   background: transparent;
   color: #222;
