--- a/src/pages/HomePage/components/ProductList/ProductList.css
+++ b/src/pages/HomePage/components/ProductList/ProductList.css
@@ -1,14 +1,14 @@
-.ProductList {
+.product-list {
   margin: 120px 0 70px 0;
 }
-.ProductList .container {
+.product-list .container {
   max-width: 1140px;
 }
 
-.ProductList__intro {
+.product-list__intro {
   padding-bottom: 60px;
 }
-.ProductList__intro__style {
+.product-list__intro__style {
   border-bottom: 2px solid #384aeb;
   padding-bottom: 8px;
 }
